# EntitiesAPI/spring-server/src/main/java/ch/heigvd/amt/project2/api/endpoints/MovieApiController.java
@@ -1,14 +1,16 @@
 package ch.heigvd.amt.project2.api.endpoints;
 
 import ch.heigvd.amt.project2.api.MovieApi;
-import ch.heigvd.amt.project2.api.model.Movie;
+import ch.heigvd.amt.project2.api.model.MovieManage;
 import ch.heigvd.amt.project2.entities.MovieEntity;
 import ch.heigvd.amt.project2.repositories.IMovieRepository;
+import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-
 import javax.validation.Valid;
 import java.net.URI;
 import java.util.Optional;
@@ -23,7 +25,7 @@ public class MovieApiController implements MovieApi {
     IMovieRepository movieRepository;
 
     @Override
-    public ResponseEntity<Void> addMovie(@Valid Movie movie) {
+    public ResponseEntity<Void> addMovie(@ApiParam(value = "Movie object that needs to be added to the DB" ,required=true )  @Valid @RequestBody MovieManage movie) {
         MovieEntity newMovieEntity = toMovieEntity(movie);
         movieRepository.save(newMovieEntity);
         URI location = ServletUriComponentsBuilder
@@ -34,14 +36,14 @@ public class MovieApiController implements MovieApi {
     }
 
     @Override
-    public ResponseEntity<Void> deleteMovie(Long movieId) {
+    public ResponseEntity<Void> deleteMovie(@ApiParam(value = "The movie id that needs to be deleted",required=true) @PathVariable("movie_id") Long movieId) {
         Optional<MovieEntity> newMovieEntity = movieRepository.findById(movieId);
         movieRepository.delete(newMovieEntity.get());
         return ResponseEntity.ok().build();
     }
 
     @Override
-    public ResponseEntity<Void> editMovie(Long movieId, @Valid Movie movie) {
+    public ResponseEntity<Void> editMovie(@ApiParam(value = "Movie id that needs to be edited",required=true) @PathVariable("movie_id") Long movieId,@ApiParam(value = "Movie object that needs to be edited" ,required=true )  @Valid @RequestBody MovieManage movie) {
         Optional<MovieEntity> newMovieEntity = movieRepository.findById(movieId);
         newMovieEntity.get().setTitle(movie.getTitle());
         newMovieEntity.get().setRelease_date(movie.getReleaseDate());
@@ -51,9 +53,9 @@ public class MovieApiController implements MovieApi {
     }
 
     @Override
-    public ResponseEntity<Movie> getMovie(Long movieId) {
+    public ResponseEntity<MovieManage> getMovie(@ApiParam(value = "The movie id that needs to be fetched",required=true) @PathVariable("movie_id") Long movieId) {
         Optional<MovieEntity> newMovieEntity = movieRepository.findById(movieId);
-        Movie newMovie = toMovie(newMovieEntity.get());
+        MovieManage newMovie = toMovieManage(newMovieEntity.get());
         return  ResponseEntity.ok(newMovie);
     }
 }
