# EntitiesAPI/spring-server/src/main/java/ch/heigvd/amt/project2/api/endpoints/ScreeningApiController.java
@@ -1,11 +1,14 @@
 package ch.heigvd.amt.project2.api.endpoints;
 
 import ch.heigvd.amt.project2.api.ScreeningApi;
-import ch.heigvd.amt.project2.api.model.Screening;
+import ch.heigvd.amt.project2.api.model.ScreeningManage;
 import ch.heigvd.amt.project2.entities.ScreeningEntity;
 import ch.heigvd.amt.project2.repositories.IScreeningRepository;
+import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
@@ -23,7 +26,7 @@ public class ScreeningApiController implements ScreeningApi {
     IScreeningRepository screeningRepository;
 
     @Override
-    public ResponseEntity<Void> addScreening(@Valid Screening screening) {
+    public ResponseEntity<Void> addScreening(@ApiParam(value = "Screening object that needs to be added to the DB" ,required=true )  @Valid @RequestBody ScreeningManage screening) {
         ScreeningEntity newScreeningEntity = toScrenningEntity(screening);
         screeningRepository.save(newScreeningEntity);
         URI location = ServletUriComponentsBuilder
@@ -34,14 +37,14 @@ public class ScreeningApiController implements ScreeningApi {
     }
 
     @Override
-    public ResponseEntity<Void> deleteScreening(Long screeningId) {
+    public ResponseEntity<Void> deleteScreening(@ApiParam(value = "The screening id that needs to be deleted",required=true) @PathVariable("screening_id") Long screeningId) {
         Optional<ScreeningEntity> newScreeningEntity = screeningRepository.findById(screeningId);
         screeningRepository.delete(newScreeningEntity.get());
         return ResponseEntity.ok().build();
     }
 
     @Override
-    public ResponseEntity<Void> editScreening(Long screeningId, @Valid Screening screening) {
+    public ResponseEntity<Void> editScreening(@ApiParam(value = "Screening id that needs to be edited",required=true) @PathVariable("screening_id") Long screeningId,@ApiParam(value = "Screening object that needs to be edited" ,required=true )  @Valid @RequestBody ScreeningManage screening) {
         Optional<ScreeningEntity> newScreeningEntity = screeningRepository.findById(screeningId);
         newScreeningEntity.get().setUser_id(screening.getUserId());
         newScreeningEntity.get().setTime(screening.getTime());
@@ -52,9 +55,9 @@ public class ScreeningApiController implements ScreeningApi {
     }
 
     @Override
-    public ResponseEntity<Screening> getScreening(Long screeningId) {
+    public ResponseEntity<ScreeningManage> getScreening(@ApiParam(value = "The screening id that needs to be fetched",required=true) @PathVariable("screening_id") Long screeningId) {
         Optional<ScreeningEntity> newScreeningEntity = screeningRepository.findById(screeningId);
-        Screening newScreening = toScreening(newScreeningEntity.get());
+        ScreeningManage newScreening = toScreeningManage(newScreeningEntity.get());
         return  ResponseEntity.ok(newScreening);
     }
 }
