# EntitiesAPI/spring-server/src/main/java/ch/heigvd/amt/project2/api/endpoints/ScreeningsApiController.java
@@ -1,17 +1,19 @@
 package ch.heigvd.amt.project2.api.endpoints;
 
 import ch.heigvd.amt.project2.api.ScreeningsApi;
-import ch.heigvd.amt.project2.api.model.Screening;
+import ch.heigvd.amt.project2.api.model.ScreeningFull;
 import ch.heigvd.amt.project2.entities.ScreeningEntity;
 import ch.heigvd.amt.project2.repositories.IScreeningRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import javax.servlet.http.HttpServletRequest;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-import static ch.heigvd.amt.project2.api.util.Transformer.toScreening;
+import static ch.heigvd.amt.project2.api.util.Transformer.toScreeningFull;
 
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-12-16T19:36:34.802Z")
 
@@ -21,12 +23,20 @@ public class ScreeningsApiController implements ScreeningsApi {
     @Autowired
     IScreeningRepository screeningRepository;
 
+    @Autowired
+    HttpServletRequest httpServletRequest;
+
     @Override
-    public ResponseEntity<List<Screening>> getScreenings() {
-        List<Screening> screenings = new ArrayList<>();
-        for (ScreeningEntity screeningEntity : screeningRepository.findAll()) {
-            screenings.add(toScreening(screeningEntity));
+    public ResponseEntity<List<ScreeningFull>> getScreenings() {
+        Long userId = (Long) httpServletRequest.getAttribute("userId");
+        if(userId != null) {
+            List<ScreeningFull> screenings = new ArrayList<>();
+            for (ScreeningEntity screeningEntity : screeningRepository.findAllById(Collections.singleton(userId))) {
+                screenings.add(toScreeningFull(screeningEntity));
+            }
+            return ResponseEntity.ok(screenings);
+        } else {
+            return ResponseEntity.status(404).build();
         }
-        return ResponseEntity.ok(screenings);
     }
 }
