# EntitiesAPI/spring-server/src/main/resources/entities-api-spec.yaml
@@ -30,7 +30,7 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Movie"
+              $ref: "#/definitions/MovieFull"
         400:
           description: "Bad request"
   /movie:
@@ -47,7 +47,7 @@ paths:
           description: "Movie object that needs to be added to the DB"
           required: true
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/MovieManage"
       responses:
         200:
           description: "Successful operation"
@@ -72,7 +72,7 @@ paths:
         200:
           description: "Successful operation"
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/MovieManage"
         400:
           description: "Bad request"
     delete:
@@ -94,7 +94,7 @@ paths:
           description: "Invalid movie supplied"
         404:
           description: "Movie not found"
-    patch:
+    put:
       tags:
         - "movie"
       summary: "Edit a movie"
@@ -113,7 +113,7 @@ paths:
           description: "Movie object that needs to be edited"
           required: true
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/MovieManage"
       responses:
         200:
           description: "Successful operation"
@@ -133,7 +133,7 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Screening"
+              $ref: "#/definitions/ScreeningFull"
         400:
           description: "Bad request"
   /screening:
@@ -150,7 +150,7 @@ paths:
           description: "Screening object that needs to be added to the DB"
           required: true
           schema:
-            $ref: "#/definitions/Screening"
+            $ref: "#/definitions/ScreeningManage"
       responses:
         200:
           description: "Successful operation"
@@ -175,7 +175,7 @@ paths:
         200:
           description: "Successful operation"
           schema:
-            $ref: "#/definitions/Screening"
+            $ref: "#/definitions/ScreeningManage"
         400:
           description: "Bad request"
     delete:
@@ -197,7 +197,7 @@ paths:
           description: "Invalid screening supplied"
         404:
           description: "Screening not found"
-    patch:
+    put:
       tags:
         - "screening"
       summary: "Edit a screening"
@@ -216,7 +216,7 @@ paths:
           description: "Screening object that needs to be edited"
           required: true
           schema:
-            $ref: "#/definitions/Screening"
+            $ref: "#/definitions/ScreeningManage"
       responses:
         200:
           description: "Successful operation"
@@ -236,7 +236,7 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Cinema"
+              $ref: "#/definitions/CinemaFull"
         400:
           description: "Bad request"
   /cinema:
@@ -253,7 +253,7 @@ paths:
           description: "Cinema object that needs to be added to the DB"
           required: true
           schema:
-            $ref: "#/definitions/Cinema"
+            $ref: "#/definitions/CinemaManage"
       responses:
         200:
           description: "Successful operation"
@@ -278,7 +278,7 @@ paths:
         200:
           description: "Successful operation"
           schema:
-            $ref: "#/definitions/Cinema"
+            $ref: "#/definitions/CinemaManage"
         400:
           description: "Bad request"
     delete:
@@ -300,7 +300,7 @@ paths:
           description: "Invalid cinema supplied"
         404:
           description: "Cinema not found"
-    patch:
+    put:
       tags:
         - "cinema"
       summary: "Edit a cinema"
@@ -319,14 +319,14 @@ paths:
           description: "Cinema object that needs to be edited"
           required: true
           schema:
-            $ref: "#/definitions/Cinema"
+            $ref: "#/definitions/CinemaManage"
       responses:
         200:
           description: "Successful operation"
         400:
           description: "Bad input"
 definitions:
-  Movie:
+  MovieFull:
     type: "object"
     properties:
       movie_id:
@@ -339,8 +339,19 @@ definitions:
       category:
         type: "string"
     xml:
-      name: "Movie"
-  Screening:
+      name: "MovieFull"
+  MovieManage:
+    type: "object"
+    properties:
+      title:
+        type: "string"
+      release_date:
+        type: "string"
+      category:
+        type: "string"
+    xml:
+      name: "MovieManage"
+  ScreeningFull:
     type: "object"
     properties:
       screening_id:
@@ -356,8 +367,22 @@ definitions:
       property:
         type: "string"
     xml:
-      name: "Screening"
-  Cinema:
+      name: "ScreeningFull"
+  ScreeningManage:
+    type: "object"
+    properties:
+      user_id:
+        type: "integer"
+        format: "int64"
+      time:
+        type: "string"
+      room:
+        type: "string"
+      property:
+        type: "string"
+    xml:
+      name: "ScreeningManage"
+  CinemaFull:
     type: "object"
     properties:
       cinema_id:
@@ -370,4 +395,15 @@ definitions:
       price:
         type: "string"
     xml:
-      name: "Cinema"
+      name: "CinemaFull"
+  CinemaManage:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+      city:
+        type: "string"
+      price:
+        type: "string"
+    xml:
+      name: "CinemaManage"
